# kotoba-old

./: .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml  TODO.md  build.rs  hongo  hongo.cmd  kotoba  kotoba.cmd  nodemon.json  package-lock.json  package.json  rustfmt.toml  taskfile.yml  tsconfig.json  tslint.json
data/: README.md
data/extra/: rtk.json
data/extra/krad/: radicals.md
data/source/extra/krad/: kradfile.txt
dict-build/: Cargo.toml
dict-build/src/: main.rs  raw.rs
dict-data/: Cargo.toml
dict-data/examples/: loading.rs  query.rs  sample.rs
dict-data/src/: file_dict.rs  file_text.rs  files.rs  lib.rs  raw.rs
dict-import/: .gitignore  Cargo.toml
dict-import/data/: README.md
dict-import/data/extra/krad/: README.md  kradfile2.txt
dict-import/src/: dict.rs  import.rs  main.rs  writer.rs
kana/: .gitignore  Cargo.toml
kana/src/: is.rs  lib.rs  to.rs
kotoba-server/: Cargo.toml
kotoba-server/src/: app.rs  common.rs  graph.rs  graphql.rs  main.rs  server.rs
src/: app.rs  audio.rs  base.rs  config.rs  import.rs  japanese.rs  logging.rs  main.rs  pronunciation.rs  server.rs  server.test.ts  server.ts  util.rs
src/api/: audio.rs  dict.rs  graphql.rs  mod.rs  wiki.rs
src/common/: files.ts  index.ts
src/db/: index.rs  merge.rs  mod.rs  search.rs  tables.rs
src/dict/: audio.rs  dict.ts  entry.rs  forvo.rs  forvo.ts  import.rs  import.ts  index.rs  index.ts  japanese_pod.rs  japanese_pod.ts  jisho.rs  jisho.ts  mod.rs  strings.rs
src/graph/: dict.rs  graphiql.rs  mod.rs
src/import/: mod.rs  yomichan.rs
src/japanese/: audio_helper.rs  deinflect.rs  dictionary.rs  forvo.rs  japanese_pod.rs  jisho.rs  mod.rs  parser.rs
src/japanese/db/: mod.rs  search.rs  tables.rs
src/kana/: constants.rs  is.rs  mod.rs  to.rs  util.rs
src/server/: pronunciation.rs
src/util/: cache.rs  concurrency.rs  datetime.rs  file.rs  mod.rs
src/wiki/: markdown.rs  mod.rs
src/wiki/markdown/: block_parser.rs  common.rs  dom.rs  html.rs  inline.rs  inline_code.rs  link_ref.rs  links.rs  mod.rs  span.rs  table_parser.rs  text.rs
src/wiki/markdown/inline/: autolink.rs  emphasis.rs  entities.rs  inline_code.rs  inline_text.rs  link.rs  links.rs  mod.rs  raw_html.rs
src/wiki/markdown/test/: basics.rs  mod.rs  spec_atx_headings.rs  spec_autolinks.rs  spec_basics.rs  spec_blockquotes.rs  spec_breaks.rs  spec_emphasis.rs  spec_entities.rs  spec_escapes.rs  spec_fenced_code.rs  spec_html_blocks.rs  spec_images.rs  spec_indented_code.rs  spec_inline_code.rs  spec_inlines.rs  spec_link_refs.rs  spec_links.rs  spec_list_items.rs  spec_lists.rs  spec_paragraphs.rs  spec_raw_html.rs  spec_setext_headings.rs  spec_tables.rs  spec_text.rs  spec_thematic_breaks.rs  template.txt
test/: mocha.opts
web/: .prettierrc  tslint.json
web/client/: package-lock.json  package.json  tsconfig.json
web/client/public/: index.html
web/client/src/: App.tsx  index.tsx  serviceWorker.ts
web/client/src/base/: nav.ts  theme.ts
web/client/src/css/: App.scss  index.scss
web/client/src/pages/: Dictionary.tsx  Home.tsx  PingPong.tsx  Todos.tsx  Wiki.tsx
web/client/src/services/: ajax.ts  graphql.ts
web/client/src/store/: app.ts  dictionary.ts  home.ts  index.ts  ping_pong.ts  todo.ts
web/client/src/store/dictionary/: types.ts
web/client/src/ui/: Editor.tsx  HideOnScroll.tsx  VirtualScroller.tsx
web/client/src/ui/edit/: doc.tsx  index.ts
web/client/src/util/: LinkTo.tsx  MainMenu.tsx  common.ts  hooks.ts
xtra/: entities.json  entities.md
