[package]
name = "hongo"
version = "0.1.0"
authors = ["Ricardo B. Machado <ricardobm@gmail.com>"]
license = "MIT"
description = "Japanese Learning pad"
repository = "https://github.com/ricardobm/hongo/"
keywords = ["japanese"]

[profile.dev]
opt-level = 2

[dependencies]
regex = "1"
lazy_static = "1"
rand = "0.7.0"
zip = "0.5.3"
itertools = "0.8.0"
serde_tuple = "0.2.5"
serde_derive = "1.0.99"
bincode = "1.1.4"
rocket = "0.4.2"
wana_kana = "0.9.3"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]

[dependencies.serde]
version   = "1.0"
features  = ["derive"]

[dependencies.serde_json]
version = "1.0"
