[package]
name = "hongo"
version = "0.1.0"
authors = ["Ricardo B. Machado <ricardobm@gmail.com>"]
license = "MIT"
description = "Japanese Learning pad"
repository = "https://github.com/ricardobm/hongo/"
keywords = ["japanese"]

build = "build.rs"

[build-dependencies]
serde = { version = "1.0", features  = ["derive"] }
serde_json = { version = "1.0" }

[profile.release]
debug = true

[profile.dev]
opt-level = 2

[dependencies]
regex = "1.3.1"
lazy_static = "1"
rand = "0.7.0"
zip = "0.5.3"
itertools = "0.8.0"
serde_tuple = "0.2.5"
serde_derive = "1.0.99"
bincode = "1.1.4"
rocket = "0.4.2"
unicode-normalization = "0.1.8"
unicode_categories = "0.1.1"
fnv = "1.0.6"
reqwest = "0.9.20"
ring = "0.13.5"
data-encoding = "2.1.2"
scraper = "0.10.1"
crossbeam = "0.7.2"
selectors = "0.21.0"
percent-encoding = "2.1.0"
slog-term = "2.4.1"
slog-stdlog = "4.0.0"
slog-scope = "4.1.2"
yoin = "*"
unicase = "2.5.1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]

[dependencies.serde]
version   = "1.0"
features  = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.slog]
version  = "2.5.2"
features = ["max_level_trace", "release_max_level_info"]

[dependencies.uuid]
version = "0.7.4"
features = ["v4", "serde"]

[dependencies.chrono]
version = "0.4.9"
features = ["serde"]
