[package]
name = "dict-data"
version = "0.1.0"
description = "Japanese dictionary database"
keywords = ["japanese"]
publish = false

[lib]
name = "dict_data"
path = "src/lib.rs"

[[example]]
name = "sample"

[[example]]
name = "query"

[[example]]
name = "loading"

[dependencies]
lazy_static = "1.4"
zip = "0.5"

[dev-dependencies]
rustyline = "6.2"

[features]

# The `no-embed` feature allows disabling embedding of the dictionary data even
# on release builds.
#
# This should only be used for testing in release builds, as it will generate
# a library that is dependent on the source file.
no-embed = []
