[package]
name = "dict-import"
version = "0.1.0"
description = "Japanese dictionary data importing"
keywords = ["japanese"]
publish = false

[dependencies]
kana = { path = "../kana" }
lazy_static = "1.4"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicase = "2.6"
unicode-normalization = "0.1"
unicode-segmentation = "1.6"
zip = "0.5"
deunicode = "1.1.1"
