[package]
name = "kotoba-server"
version = "0.1.0"
authors = ["Ricardo B. Machado <ricardobm@gmail.com>"]
license = "MIT"
description = "Japanese dictionary server backend"
repository = "https://github.com/ricardobm/kotoba/"
keywords = ["japanese"]

[dependencies]
juniper = "0.14.2"
juniper_rocket = "0.5.2"
lazy_static = "1.4.0"
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", default-features = false, features = ["json"] }
rocket-include-static-resources = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
